# pafe.rs

./: .gitmodules  Cargo.toml  Cross.toml
pafe-sys/: Cargo.toml  build.rs  prepare_build.sh
src/: felica.rs  pasori.rs
