[package]
name = "pafe-sys"
description = "Bindings for the libpafe library"
homepage = "https://github.com/mistydemeo/pafe.rs"
repository = "https://github.com/mistydemeo/pafe.rs"
version = "0.1.0"
authors = ["Misty De Meo <mistydemeo@gmail.com>"]
edition = "2018"
categories = ["external-ffi-bindings"]
keywords = ["smartcard"]
license = "GPL-2.0-only"
readme = "../README.md"
build = "build.rs"

[features]
vendored = ['copy_dir']

[build-dependencies]
bindgen = "0.69.4"
copy_dir = { version = "0.1.3", optional = true }
